spacing and other clean up fixes

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -255,6 +255,10 @@
     max-width:1500px;
   }
 
+  .site-title {
+    min-width: 375px;
+  }
+
   .github-star-badge {
     color: #24292e;
     display: flex;
